# OpenGL-Minimal

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
